Continued testing the connection between web pages and the database.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
@@ -43,6 +43,6 @@ else
 	public void Confirmar()
 	{
 		SistemaFeiras.GetInstance().AddStandFeira(idStand, idFeira);
-		confirmou = false;
+		confirmou = true;
 	}
 }
