--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
@@ -42,7 +42,7 @@ else
 
 	public void Confirmar()
 	{
-		SistemaFeiras.GetInstance().AddStandFeira(idStand, idFeira);
+		SistemaFeiras.GetInstance().CriaCandidatura(idStand, idFeira);
 		confirmou = true;
 	}
 }
