Contined testing the web pages connected to the database. Clients now are able to make a bid in auctions.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/FormCandidaturaComponent.razor
@@ -21,7 +21,7 @@ else
 		</div>
 		<div>
 			<label><b>Id Stand</b></label>
-			<input type="text" class="tb" id="stand" name="stand" placeholder="Insira o seu nome de utilizador" @bind-value="idStand" readonly="readonly " />
+			<input type="text" class="tb" id="stand" name="stand" @bind-value="idStand" readonly="readonly" />
 		</div>
 		<div>
 			<button class="buttonA" @onclick="Confirmar">Confirmar</button>
