--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeirasComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeirasComponent.razor
@@ -15,7 +15,7 @@
 }
 else if (showLeilao)
 {
-	<ShowFeiraLeilaoComponent idFeira="@feiraSelecionada"/>
+	<ShowFeiraLeilaoComponent idFeira="@feiraSelecionada" email="@email"/>
 }
 else
 {
