--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
@@ -62,6 +62,11 @@ else
 				// Show Leiloes
 				ShowLeiloesComponent.GetInstance().CleanWarning();
 				break;
+
+			case 7:
+				// Show Leiloes
+				ShowLeilaoComponent.GetInstance().CleanWarning();
+				break;
 		}
 	}
 }
