--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeiloesComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeiloesComponent.razor
@@ -11,7 +11,7 @@
 <div>
 	@if(showLeilao)
 	{
-		<ShowLeilaoComponent leilao="@table.GetElement()"/>
+		<ShowLeilaoComponent leilao="@table.GetElement()" email="@emailCL"/>
 	}
 	else
 	{
@@ -20,6 +20,10 @@
 		@if (erro != 0)
 		{
 			<WarningComponent mensagem="@codigosErro[erro]" sucess="false" page="6" />
+		}
+		else if (sucess)
+		{
+			<WarningComponent mensagem="@sucess_msg" sucess="true" page="6"/>
 		}
 		<div class="tableFixHead">
 			<table>
@@ -41,8 +45,8 @@
 							<td> @nomesDonos[leilao.Item2.Stand]</td>
 							<td> @nomesProdutos[leilao.Item2.Produto]</td>
 							<td> @leilao.Item2.Quantidade</td>
-							<td> @leilao.Item2.Date</td>
-							<td> @leilao.Item3</td>
+							<td> @leilao.Item2.Date.ToShortDateString()</td>
+							<td> @leilao.Item2.BidAtual</td>
 						</tr>
 					}
 				</tbody>
@@ -67,6 +71,8 @@
 	public string emailCL { get; set; }
 	[Parameter, EditorRequired]
 	public int idStand { get; set; }
+	private bool sucess = false;
+	private string sucess_msg = "";
 	private Table<Leilao> table;
 	private Dictionary<int, string> nomesDonos = new Dictionary<int, string>();
 	private Dictionary<int, string> nomesProdutos = new Dictionary<int, string>();
@@ -82,65 +88,30 @@
 	private List<Leilao> OnInitializedCL()
 	{
 		List<Leilao> conteudo = SistemaFeiras.GetInstance().GetLeiloesCL(emailCL);
-		/*
-		nomesDonos[4] = "braga";
-		nomesProdutos[2] = "pera";
-		conteudo.Add(new Leilao(8, DateTime.Now, 20.0f, 100.0f, 2, 3, 4 , 5, 6));
-		conteudo.Add(new Leilao(2, DateTime.Now, 30.0f, 120.0f, 3, 4, 4 , 2, 5));
-		conteudo.Add(new Leilao(4, DateTime.Now, 40.0f, 130.0f, 4, 6, 3 , 2, 5));
-		conteudo.Add(new Leilao(5, DateTime.Now, 50.0f, 150.0f, 5, 5, 3 , 2, 4));
-		conteudo.Add(new Leilao(3, DateTime.Now, 60.0f, 165.0f, 6, 4, 4 , 1, 6));
-		conteudo.Add(new Leilao(7, DateTime.Now, 95.0f, 164.0f, 7, 1, 4 , 5, 3));
-		conteudo.Add(new Leilao(6, DateTime.Now, 90.0f, 500.0f, 8, 2, 4 , 1, 3));
-		*/
 		return conteudo;
 	}
 	private List<Leilao> OnInitializedFeira()
 	{
 		List<Leilao> conteudo = SistemaFeiras.GetInstance().GetLeiloesFeira(idFeira);
 		retroceder = 1;
-		/*
-		conteudo.Add(new Leilao(8, DateTime.Now, 20.0f, 100.0f, 2, 3, 4, 5, 6));
-		nomesDonos[4] = "abc";
-		nomesProdutos[2] = "laranja";
-		conteudo.Add(new Leilao(8, DateTime.Now, 20.0f, 100.0f, 2, 3, 4 , 5, 6));
-		conteudo.Add(new Leilao(2, DateTime.Now, 30.0f, 120.0f, 3, 4, 4 , 2, 5));
-		conteudo.Add(new Leilao(4, DateTime.Now, 40.0f, 130.0f, 4, 6, 3 , 2, 5));
-		conteudo.Add(new Leilao(5, DateTime.Now, 50.0f, 150.0f, 5, 5, 3 , 2, 4));
-		conteudo.Add(new Leilao(3, DateTime.Now, 60.0f, 165.0f, 6, 4, 4 , 1, 6));
-		conteudo.Add(new Leilao(7, DateTime.Now, 95.0f, 164.0f, 7, 1, 4 , 5, 3));
-		conteudo.Add(new Leilao(6, DateTime.Now, 90.0f, 500.0f, 8, 2, 4 , 1, 3));
-		*/
 		return conteudo;
 	}
 	private List<Leilao> OnInitializedFeiraStand()
 	{
 		retroceder = 2;
 		List<Leilao> conteudo = SistemaFeiras.GetInstance().GetLeiloesFeiraStand(idFeira,idStand);
-		/*
-		conteudo.Add(new Leilao(20, DateTime.Now, 20.0f, 100.0f, 2, 3, 4, 5, 6));
-		nomesDonos[4] = "portugal";
-		nomesProdutos[2] = "cr7";
-		conteudo.Add(new Leilao(8, DateTime.Now, 20.0f, 100.0f, 2, 3, 4 , 5, 6));
-		conteudo.Add(new Leilao(2, DateTime.Now, 30.0f, 120.0f, 3, 4, 4 , 2, 5));
-		conteudo.Add(new Leilao(4, DateTime.Now, 40.0f, 130.0f, 4, 6, 3 , 2, 5));
-		conteudo.Add(new Leilao(5, DateTime.Now, 50.0f, 150.0f, 5, 5, 3 , 2, 4));
-		conteudo.Add(new Leilao(3, DateTime.Now, 60.0f, 165.0f, 6, 4, 4 , 1, 6));
-		conteudo.Add(new Leilao(7, DateTime.Now, 95.0f, 164.0f, 7, 1, 4 , 5, 3));
-		conteudo.Add(new Leilao(6, DateTime.Now, 90.0f, 500.0f, 8, 2, 4 , 1, 3));
-		*/
 		return conteudo;
 	}
 	protected override void OnInitialized()
 	{
 		List<Leilao> conteudo;
-		instance = this;
-		if (emailCL.Length != 0)
-			conteudo = OnInitializedCL();
-		else if (idStand != -1)
+		instance = this; 
+		if (idStand != -1)
 			conteudo = OnInitializedFeiraStand();
-		else
+		else if(idFeira != -1)
 			conteudo = OnInitializedFeira();
+		else
+			conteudo = OnInitializedCL();
 		SistemaFeiras sistema = SistemaFeiras.GetInstance();
 		this.table = new Table<Leilao>(conteudo);
 		foreach(Leilao leilao in conteudo)
@@ -175,11 +146,22 @@
 	public void CleanWarning()
 	{
 		this.erro = 0;
+		sucess = false;
 		StateHasChanged();
 	}
 	public void GetBack()
 	{
 		showLeilao = false;
+		sucess = false;
+		erro = 0;
+		table.Unselect();
+		StateHasChanged();
+	}
+	public void GetBack(string message)
+	{
+		showLeilao = false;
+		sucess = true;
+		sucess_msg = message;
 		table.Unselect();
 		StateHasChanged();
 	}
