--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
@@ -146,7 +146,7 @@ else
 	}
 	private void CreateVenda()
 	{
-		venda = new Venda(0,DateTime.Now,precoTotal,email,idFeira,-1,idStand);
+		venda = new Venda(0,DateTime.Now,precoTotal,email,idFeira,null,idStand);
 	}
 	public void CompraRapida()
 	{
