--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowUserLeilaoComponent.razor
@@ -2,7 +2,8 @@
 
 <ShowLeiloesComponent idFeira="-1" emailCL="@emailCL" idStand="-1"/>
 
-@code {
+@code 
+{
 	[Parameter, EditorRequired]
 	public string emailCL { get; set; }
 }
