--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowLeilaoComponent.razor
@@ -2,6 +2,7 @@
 @using SourceCode.Feiras;
 @using SourceCode.Stands;
 @using SourceCode;
+@using SourceCode.Utilizadores;
 
 <PageTitle>Leilão</PageTitle>
 <h3>Bem vindo ao Leilão</h3>
@@ -15,13 +16,21 @@
 	<input type="text" class="tb" id="produto" name="produto" readonly="readonly" @bind-value="produto.Nome" />
 	<label><b>Quantidade</b></label>
 	<input type="text" class="tb" id="quantidade" name="quantidade" readonly="readonly" @bind-value="quantidade" />
+	<label><b>Valor máximo</b></label>
+	<input type="text" class="tb" id="valorMax" name="valorMax" readonly="readonly" @bind-value="valorMax" />
 	<label><b>Última licitação</b></label>
 	<input type="text" class="tb" id="valorUltimaBid" name="valorUltimaBid" readonly="readonly" @bind-value="ultimaLicitação" />
-	<label><b>Valor da licitação</b></label>
-	<input type="text" class="tb" id="valorLicitação" name="valorLicitação" placeholder="xxxxxxxx" @bind-value="valorLicitação" />
+	@if(isClient)
+	{
+		<label><b>Valor da licitação</b></label>
+		<input type="text" class="tb" id="valorLicitação" name="valorLicitação" placeholder="xxxxxxxx" @bind-value="valorLicitação" />
+	}
 </div>
 <div>
-	<button class="buttonA buttonTable1" @onclick="Licitar">Licitar</button>
+	@if(isClient)
+	{
+		<button class="buttonA buttonTable1" @onclick="Licitar">Licitar</button>
+	}
 	<button class="buttonA buttonTable2" @onclick="Voltar">Voltar</button>
 </div>
 
@@ -33,13 +42,18 @@
 	public string email { get; set; }
 	private float ultimaLicitação;
 	private float valorLicitação;
+	private string valorMax = "-";
 	private int quantidade;
 	private Produto produto;
 	private string codigo_erro = "";
 	private bool erro = false;
+	private bool isClient;
 	private static ShowLeilaoComponent showLeilaoComponent; 
 	protected override void OnInitialized()
 	{
+		if (leilao.ValormMaximo.HasValue)
+			valorMax = leilao.ValormMaximo.Value.ToString();
+		isClient = SistemaFeiras.GetInstance().GetUtilizador(email) is Cliente;
 		showLeilaoComponent = this;
 		produto = SistemaFeiras.GetInstance().GetProduto(leilao.Produto);
 		quantidade = leilao.Quantidade;
