--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowFeiraLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowFeiraLeilaoComponent.razor
@@ -1,6 +1,6 @@
 ﻿@page "/showleiloesfeira"
 
-<ShowLeiloesComponent idStand="-1" idFeira="@idFeira" emailCL="@email"/>
+<ShowLeiloesComponent idStand="-1" idFeira="@idFeira" email="@email"/>
 
 @code
 {
