--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowStandLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/ShowStandLeilaoComponent.razor
@@ -1,6 +1,6 @@
 ﻿@page "/showleiloesstand"
 
-<ShowLeiloesComponent idStand="@idStand" idFeira="@idFeira" emailCL="@email"/>
+<ShowLeiloesComponent idStand="@idStand" idFeira="@idFeira" email="@email"/>
 
 @code 
 {
