--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
@@ -62,10 +62,13 @@ else
 				// Show Leiloes
 				ShowLeiloesComponent.GetInstance().CleanWarning();
 				break;
-
 			case 7:
 				// Show Leiloes
 				ShowLeilaoComponent.GetInstance().CleanWarning();
+				break;
+			case 8:
+				// Show Leiloes
+				FeiraSelectComponent.GetInstance().CleanWarning();
 				break;
 		}
 	}
